Delete the Shadow shim, register the collision check only with Shadow, and trim Codex's test cost
- Delete MicronautRunnerJar.getConflictingArchive(), a deprecated, ignored
  property that was never released.
- Register validateMicronautRunnerShadowOutputs from one withPlugin callback
  for either Shadow id, so a project without Shadow no longer lists a task
  that fails when run. The execution-time check is unchanged.
- ShadowCollisionFunctionalTest: drop the shim test and replace the 2x2
  plugin-id/task-order matrix with the one order that exercises the
  shadowJar edge, on the legacy id (7 fixtures, 14 builds, 2 launches).
- IncrementalBuildFunctionalTest: drop the HTTP build-cache variant of the
  dependency-order test and its in-process server.
- MavenBasicSampleTest: drop the network-dependent strict-Maven test, merge
  the non-clean package cycle into the packaging test on a copied sample
  (2 invocations, 1 launch) and drop the Runner-only goal rerun.
- ManifestModuleAccessTest: one archive, one fork, a real export-dependent
  and a real open-dependent call.
- MicronautRunnerPluginFunctionalTest: fold the addExports/addOpens wiring
  check into preserveKeepsDependenciesCompressed and delete the two #85
  TestKit builds; maven-basic no longer configures unused grants.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>